--- a/exe.html
+++ b/exe.html
@@ -11,7 +11,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <header class="bg-primary">
+    <header class="bg-info">
         <div class="row text-white">
             <div class="col-md-6 p-3 pl-5 col-9" float="left">
                 <IMG src="LOGO.png" class="logo"></IMG>
